<resources>
    <string name="app_name">Order Now</string>
    <string-array name="country">

        <item>None</item>

        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>

        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin (Dahomey)</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Brunswick and Lüneburg</item>
        <item>Bulgaria</item>
        <item>Burma</item>
        <item>Burundi</item>

        <item>Cabo Verde</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo Free State</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czechia</item>
        <item>Czechoslovakia</item>

        <item>Democratic Republic of the Congo</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>

        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Eswatini</item>
        <item>Ethiopia</item>

        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>

        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guyana</item>

        <item>Haiti</item>
        <item>Hanover</item>
        <item>Hawaii</item>
        <item>Holy See</item>
        <item>Honduras</item>
        <item>Hungary</item>

        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>

        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>

        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Korea</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>

        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>

        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Malta</item>
        <item>Mali</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>

        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North Macedonia</item>
        <item>Norway</item>

        <item>Oman</item>

        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>

        <item>Qatar</item>

        <item>Republic of Korea (South Korea)</item>
        <item>Republic of the Congo</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>

        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>

        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Texas</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Tuvalu</item>

        <item>Uganda</item>
        <item>Ukraine</item>
        <item>Union of Soviet Socialist Republics</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>

        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Vietnam</item>

        <item>Yemen</item>

        <item>Zambia</item>
        <item>Zimbabwe</item>

    </string-array>
    <string name="main_heading">SIGN IN TO START USING THE APP</string>
    <string name="user_name">Full Name</string>
    <string name="opt_male">Male</string>
    <string name="opt_female">Female</string>
    <string name="ph_mail">Phone/Email</string>
    <string name="pass_word">Enter Password</string>
    <string name="pass_show">Show Password</string>
    <string name="country_sel">Select a Country</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sharing" translatable="false">Share</string>
    <string name="chng_lang" translatable="false">Change App Language</string>
    <string name="close_app" translatable="false">Close</string>
    <string name="read1" translatable="false">Read More</string>
    <string name="read2" translatable="false">Read More</string>
    <string name="read3" translatable="false">Read More</string>
    <string name="read4" translatable="false">Read More</string>
    <string name="buy1" translatable="false">Buy Now</string>
    <string name="buy2" translatable="false">Buy Now</string>
    <string name="buy3" translatable="false">Buy Now</string>
    <string name="buy4" translatable="false">Buy Now</string>
    <string name="cont1" translatable="false">The GeForce GTX 1060 graphics card is loaded with innovative new gaming
        technologies, making it the perfect choice for the latest high-definition games. Powered by
        NVIDIA Pascal ™—the most advanced GPU architecture ever created—the GeForce GTX 1060 delivers
        brilliant performance that opens the door to virtual reality and beyond. #GameReady.</string>
    <string name="head1" translatable="false"> NVIDIA GTX 1060</string>
    <string name="head2" translatable="false"> SPECS :</string>
    <string name="cont2" translatable="false"> GPU Architecture ----- Pascal,  NVIDIA CUDA® Cores ---- 1280, Frame Buffer ---- 6 GB GDDR5, Memory Speed ---- 8 Gbps</string>
    <string name="head3" translatable="false">CORE I7</string>
    <string name="cont3" translatable="false">CPU Cores	4, Frequency (GHz)	2.8 GHz, Cache (MB)	6, TDP (Watts)	45 W, Product Segment	Mobile, Status	Released, Announced On	2017-01-01</string>
    <string name="head4" translatable="false">Asus ROG GL551</string>
    <string name="cont4" translatable="false">Brand - Asus, Model - ROG GL551, Size - 15.00-inch, Resolution - 1920x1080 pixels, Touch Screen - No, Processor - Intel Core i7 4th Gen 4720HQ,
Base Clock Speed - 2.6 GHz, RAM - 8GB, RAM Slots - 2, Expandable RAM up to (GB) - 16GB, Graphics Processor - Nvidia GeForce GTX 950M Dedicated Graphic Memory Type - DDR3, Hard disk - 1TB,
SSD - No</string>
    <string name="head5" translatable="false">ROG STRIX X570 - E Gaming</string>
    <string name="cont5" translatable="false">AMD X570 ATX gaming motherboard with PCIe 4.0, 2.5 Gbps and Intel Gigabit LAN, Wi-Fi 6 (802.11ax), 16 power stages, dual M.2 with heatsinks, SATA 6Gb/s, USB 3.2 Gen 2 and Aura Sync RGB lighting</string>

</resources>